--- a/my-first-webpage/index.html
+++ b/my-first-webpage/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Demo Website</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800' rel='stylesheet' type='text/css'>
     <link href="//fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Paytone+One' rel='stylesheet' type='text/css'>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.0/animate.min.css" rel="stylesheet" type="text/css">
@@ -11,29 +12,33 @@
 </head>
 <body>
         <div id="slide-Panel">
-            <div class="wrap">
-                
-                <input id="slider-1-trigger" type="radio" value="slide1" name="slides" checked>
-                <section class="slide slide-one fadeIn">
-                        <img src="svg/globe_grid.svg">
-                        <h1>Web Development</h1>
-                        <p>How to Build a Blog</p>
-                        <a href="#">More Info</a>
-                </section>
+                <div class="wrap">
 
-                <input id="slider-2-trigger" type="radio" value="slide2" name="slides">
-                <section class="slide slide-two fadeIn">
-                        <img src="svg/globe_grid.svg">
-                        <h1>Learn core skills</h1>
-                        <p>Program websites in HTML, CSS and JavaScript</p>
-                        <a href="#">More Info</a>
-                </section>
+                    <input id="slider-1-trigger" type="radio" value="slide1" name="slides" checked>
+                    <section class="slide slide-one fadeIn">
+                        <div class="wrapper">
+                            <img src="svg/globe_grid.svg">
+                            <h1>Web Development</h1>
+                            <p>How to Build a Blog</p>
+                            <a href="#">More Info</a>
+                        </div>
+                    </section>
+
+                    <input id="slider-2-trigger" type="radio" value="slide2" name="slides">
+                    <section class="slide slide-two fadeIn">
+                        <div class="wrapper">
+                            <img src="svg/globe_grid.svg">
+                            <h1>Learn core skills</h1>
+                            <p>Program websites in HTML, CSS and JavaScript</p>
+                            <a href="#">More Info</a>
+                        </div>    
+                    </section>
 
             </div>
         </div>
 
         <header>
-            
+            <div class="wrapper">
                 <h1 class="name"><a href="#">WEB DEVELOPMENT &amp; <span>ADVERTISING</span></a></h1>
 
                 <nav>
@@ -76,120 +81,131 @@
                             <option>Contacts</option>
                         </select>
                     </div>
-                </nav>    
+                </nav> 
+            </div>
         </header>
 
         <div class="info">
-            <h1>About us</h1>
-            <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorp</p>
-            <article>
-                <p>Ceonsequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem vestigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
-            </article>
+            <div class="wrapper">
+                <h1>About us</h1>
+                <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorp</p>
+                <article>
+                    <p>Ceonsequat, <a href="#">vel illum dolore eu</a> feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem vestigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.</p>
+                </article>
 
-            <ul>
-                <li>54%</li>
-                <li>73%</li>
-                <li>87%</li>
-            </ul>
-
+                <ul>
+                    <li data-descr="CLARITAS EST ETIAM
+"><div>54%</div></li>
+                    <li data-descr="EODEM MODO TYPI"><div>73%</div></li>
+                    <li data-descr="Typi non habent claritatem insitam"><div>87%</div></li>
+                </ul>
+            </div>    
         </div>
 
         <div class="choose">
-            <h1>Why choose us</h1>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, andit praesentsed diam nonummy nibh</p>
-            <img src="http://livedemo00.template-help.com/wt_52537/images/index_img01.png">
+            <div class="wrapper">
+                <h1>Why choose us</h1>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, andit praesentsed diam nonummy nibh</p>
+                <img src="http://livedemo00.template-help.com/wt_52537/images/index_img01.png">
+            </div>
         </div>
 
 
         <div class="clients">
-            <div id="carousel">
+            <div class="wrapper">
+                <div id="carousel">
 
-                <div class="slide1">
-                    <a href="#">robert adams</a>
-                    <p>Ut tristique lorem eget aliquam iaculis. Donec eu luctus risus, dignissim varius tortor. Integer sit amet sodales nunc. Curabitur nisi diam, sodales eu metus ac, rutrum elementum felis. Vivamus eu neque hendrerit, hendrerit tortor sit amet, congue lacus. </p>
+                    <div class="slide1">
+                        <a href="#">robert adams</a>
+                        <p>Ut tristique lorem eget aliquam iaculis. Donec eu luctus risus, dignissim varius tortor. Integer sit amet sodales nunc. Curabitur nisi diam, sodales eu metus ac, rutrum elementum felis. Vivamus eu neque hendrerit, hendrerit tortor sit amet, congue lacus. </p>
+                    </div>
+
+                    <div class="slide2">
+                        <a href="#">monica perry</a>
+                        <p>Proin aliquet fringilla posuere. Quisque vitae nisi arcu. Phasellus rutrum, ex pretium tempor pharetra, tortor nunc euismod ligula, vitae efficitur ipsum orci nec augue. Etiam bibendum nulla metus, at lobortis nisl malesuada eu. Vestibulum arcu metus, sollicitudin ut elit vitae, aliquam imperdiet dolor. Curabitur sed porta lacus, ac pellentesque enim.</p>
+                    </div>
+
+                    <div class="slide3">
+                        <a href="#">john smith</a>
+                        <p>Donec venenatis sagittis cursus. Vivamus non justo nec nunc lacinia laoreet. Vestibulum feugiat gravida dapibus. In maximus porta pretium. Aliquam vitae ornare dolor. Fusce sit amet nunc ac massa sagittis interdum ut a nisl. Nulla at lacus eu justo mattis pretium a ut tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
+                    </div>
+
                 </div>
-
-                <div class="slide2">
-                    <a href="#">monica perry</a>
-                    <p>Proin aliquet fringilla posuere. Quisque vitae nisi arcu. Phasellus rutrum, ex pretium tempor pharetra, tortor nunc euismod ligula, vitae efficitur ipsum orci nec augue. Etiam bibendum nulla metus, at lobortis nisl malesuada eu. Vestibulum arcu metus, sollicitudin ut elit vitae, aliquam imperdiet dolor. Curabitur sed porta lacus, ac pellentesque enim.</p>
-                </div>
-
-                <div class="slide3">
-                    <a href="#">john smith</a>
-                    <p>Donec venenatis sagittis cursus. Vivamus non justo nec nunc lacinia laoreet. Vestibulum feugiat gravida dapibus. In maximus porta pretium. Aliquam vitae ornare dolor. Fusce sit amet nunc ac massa sagittis interdum ut a nisl. Nulla at lacus eu justo mattis pretium a ut tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae.</p>
-                </div>
-
             </div>
         </div>
 
 
         <div class="info2">
+            <div class="wrapper">
+                <div class="first col">
+                    <h3>WEB-DESIGN</h3>
+                    <p>Ceonsequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non habent claritatem</p>
+                </div>
 
-            <div class="first col">
-                <h3>WEB-DESIGN</h3>
-                <p>Ceonsequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non habent claritatem</p>
+                <div class="second col">
+                    <h3>WEB DEVELOPMENT</h3>
+                    <p>Vvel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non habent claritatem insitam</p>
+                </div>
+
+                <div class="third col">
+                    <h3>SUPPORT</h3>
+                    <p>Dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facil habent claritatem insitams legentis in iis qui facit eorum</p>
+                </div>
+
+                <div class="fourth col">
+                    <h3>ADVERTISING</h3>
+                    <p>Vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non habent claritatem</p>
+                </div>
             </div>
-
-            <div class="second col">
-                <h3>WEB DEVELOPMENT</h3>
-                <p>Vvel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non habent claritatem insitam</p>
-            </div>
-
-            <div class="third col">
-                <h3>SUPPORT</h3>
-                <p>Dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facil habent claritatem insitams legentis in iis qui facit eorum</p>
-            </div>
-
-            <div class="fourth col">
-                <h3>ADVERTISING</h3>
-                <p>Vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non habent claritatem</p>
-            </div>
-
         </div>
 
         <div class="info3">
+            <div class="wrapper">
 
-            <h1>Our news</h1>
-            <p>Enim ad minim veniam, quis nostrud exerci tation ullamcorp</p>
+                <h1>Our news</h1>
+                <p>Enim ad minim veniam, quis nostrud exerci tation ullamcorp</p>
 
-            <div class="fourth col">
-                <h3>Duis autem vel eum</h3>
-                <p>Veiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non</p>\
-                <h4>23 / 09 / 2014</h4>
+                <div class="fourth col">
+                    <h3>Duis autem vel eum</h3>
+                    <p>Veiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugait nulla facilisi. Typi non</p>
+                    <h4>23 / 09 / 2014</h4>
+                </div>
+
+                <div class="five col">
+                    <h3>Nam liber tempor cum</h3>
+                    <p>Nuacilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugat claritatem insitam; est</p>
+                    <h4>27 / 09 / 2014</h4>
+                </div>
+
+                <div class="fourth col">
+                    <h3>Duis autem vel eum</h3>
+                    <p>Nuacilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugat claritatem insitam; est</p>
+                    <h4>21 / 10 / 2014</h4>
+                </div>
+
             </div>
-
-            <div class="five col">
-                <h3>Nam liber tempor cum</h3>
-                <p>Nuacilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugat claritatem insitam; est</p>
-                <h4>27 / 09 / 2014</h4>
-            </div>
-
-            <div class="fourth col">
-                <h3>Duis autem vel eum</h3>
-                <p>Nuacilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptaum zzelenit augue duis dolore te feugat claritatem insitam; est</p>
-                <h4>21 / 10 / 2014</h4>
-            </div>
-
         </div>
 
         <div id="form">
+            <div class="wrapper">
+                <h1>Contact form</h1>
 
-            <h1>Contact form</h1>
-
-            <form action="somescript.php" method="get">
-                <input type="text" name="name" id="name" placeholder="NAME">
-                <input type="phone" name="phone" id="phone" placeholder="PHONE">
-                <input type="email" name="email" id="email" placeholder="EMAIL">
-                <textarea name="textarea" id="textarea" placeholder="MESSAGE"></textarea>
-                <input type="submit" value="SEND" name="submit" value="submit">
-            </form>
-
+                <form action="somescript.php" method="get">
+                    <input type="text" name="name" id="name" placeholder="NAME">
+                    <input type="phone" name="phone" id="phone" placeholder="PHONE">
+                    <input type="email" name="email" id="email" placeholder="EMAIL">
+                    <textarea name="textarea" id="textarea" placeholder="MESSAGE"></textarea>
+                    <input type="submit" value="SEND" name="submit" value="submit">
+                </form>
+            </div>
         </div> 
 
         <footer>
-            <h1>WEB DEVELOPMENT &amp; ADVERTISING</h1>
-            <p>copyright &copy; 2015</p>
-            <a href="privacy.html">privacy policy</a>
+            <div class="wrapper">
+                <h1>WEB DEVELOPMENT &amp; ADVERTISING</h1>
+                <p>copyright &copy; 2015</p>
+                <a href="privacy.html">privacy policy</a>
+            </div>
         </footer> 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="js/app.js"></script>
